--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vant": "^2.3.3",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
