--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "autoprefixer": "^9.7.3",
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "element-ui": "^2.13.0",
+    "mint-ui": "^2.2.13",
+    "postcss-cssnext": "^3.1.0",
     "postcss-pxtorem": "^4.0.1",
-    "vant": "^2.3.3",
+    "vant": "^2.4.1",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.3",
@@ -20,6 +24,8 @@
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "postcss-cli": "^6.1.3",
+    "postcss-loader": "^3.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
