添加注册功能 添加注销功能 修改我的界面 增加购物车判断

--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "animate.css": "^3.7.2",
     "autoprefixer": "^9.7.3",
     "axios": "^0.19.0",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.4.3",
-    "element-ui": "^2.13.0",
-    "mint-ui": "^2.2.13",
     "postcss-cssnext": "^3.1.0",
     "postcss-pxtorem": "^4.0.1",
     "vant": "^2.4.1",
