--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "node-sass": "^4.13.0",
     "postcss-cli": "^6.1.3",
     "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.1",
+    "style-loader": "^1.1.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
