--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "node-sass": "^4.13.0",
     "postcss-cli": "^6.1.3",
     "postcss-loader": "^3.0.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "sass-loader": "^8.0.1",
     "style-loader": "^1.1.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
