--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
             - name: Install and Build 🔧
               run: |
                   npm install
-                  npm run build:prod
+                  npm run build
                   cp dist/index.html dist/404.html
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@releases/v3
@@ -21,3 +21,4 @@ jobs:
                   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
                   BRANCH: gh-pages
                   FOLDER: dist
+
