--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "main.ts",
     "scripts": {
-        "dev": "webpack serve --config build/webpack.config.dev.js --mode=development --progress",
-        "build": "webpack --config build/webpack.config.dev.js --mode=production"
+        "dev": "webpack serve --config build/webpack.config.dev.js --mode development --progress",
+        "build": "webpack --config build/webpack.config.dev.js --mode production"
     },
     "repository": {
         "type": "git",
