--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "javascript-codes",
     "version": "1.0.0",
+    "private": true,
     "description": "",
     "main": "main.ts",
     "scripts": {
