--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-cli-plugin-inject-style",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "automatically inject style files based on the style path",
     "author": "jiangweiye <jiangweiye@outlook.com> (https://github.com/jwyGithub)",
     "license": "MIT",
@@ -17,17 +17,17 @@
     ],
     "exports": {
         ".": {
-            "require": "./dist/index.cjs.js"
+            "require": "./dist/index.cjs.js",
+            "types": "./dist/index.d.ts"
         }
     },
     "main": "./dist/index.cjs.js",
-    "types": "./dist/types/index.d.ts",
+    "types": "./dist/index.d.ts",
     "files": [
         "dist"
     ],
     "scripts": {
-        "dev": "rollup -c rollup.config.ts --configPlugin rollup-plugin-typescript2 --watch",
-        "build": "rollup -c rollup.config.ts --configPlugin rollup-plugin-typescript2",
+        "build": "tsup",
         "release": "npm run build && bumpp package.json --commit --push --tag && npm publish --access=public",
         "lint": "eslint ."
     },
@@ -35,13 +35,14 @@
         "@vue/cli-service": "*"
     },
     "devDependencies": {
-        "@jiangweiye/eslint-config": "^0.0.27",
-        "@types/node": "^18.15.3",
+        "@jiangweiye/eslint-config": "^0.1.1",
+        "@jiangweiye/tsconfig": "^0.0.6",
+        "@swc/core": "^1.3.96",
+        "@types/node": "^20.8.10",
         "@vue/cli-service": "~5.0.8",
-        "bumpp": "^9.0.0",
-        "eslint": "^8.36.0",
-        "rollup": "^3.19.1",
-        "rollup-plugin-typescript2": "^0.34.1",
-        "typescript": "^5.0.2"
+        "bumpp": "^9.2.0",
+        "eslint": "^8.53.0",
+        "tsup": "^7.2.0",
+        "typescript": "^5.2.2"
     }
 }
