--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "extends": "@jiangweiye/tsconfig/tsconfig.node.json",
     "compilerOptions": {
         "target": "esnext",
         "useDefineForClassFields": true,
@@ -7,7 +8,7 @@
         "strict": true,
         "module": "esnext"
     },
-    "include": ["src/**/*", "rollup.config.ts"],
+    "include": ["src/**/*", "tsup.config.ts"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
 
