--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "scripts": {
         "build": "tsup",
         "release": "npm run build && bumpp package.json --commit --push --tag && npm publish --access=public",
-        "publish": "npm publish --access=public",
+        "publish": "bumpp package.json --commit --push --tag && npm publish --access=public",
         "lint": "eslint ."
     },
     "peerDependencies": {
