--- a/package.json
+++ b/package.json
@@ -31,22 +31,37 @@
     ],
     "scripts": {
         "build": "tsup",
-        "release": "npm run build && bumpp package.json --commit --push --tag && npm publish --access=public",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "prettier": "pnpx prettier --write .",
+        "lint-staged": "lint-staged",
+        "release": "standard-version"
     },
     "peerDependencies": {
         "@vue/cli-service": "*"
     },
     "devDependencies": {
-        "@jiangweiye/eslint-config": "^0.1.1",
-        "@jiangweiye/tsconfig": "^0.0.9",
+        "@jiangweiye/eslint-config": "^0.1.12",
+        "@jiangweiye/prettier-config": "^0.0.18",
+        "@jiangweiye/tsconfig": "^0.0.11",
         "@swc/core": "^1.5.3",
         "@types/node": "^20.12.10",
         "@vue/cli-service": "~5.0.8",
         "bumpp": "^9.4.1",
-        "eslint": "^9.2.0",
+        "eslint": "^9.6.0",
+        "lint-staged": "^15.2.10",
+        "standard-version": "^9.5.0",
         "tsup": "^8.0.2",
         "typescript": "^5.4.5"
+    },
+    "simple-git-hooks": {
+        "pre-commit": "pnpm lint-staged"
+    },
+    "lint-staged": {
+        "*.{js,ts}": [
+            "pnpm lint",
+            "pnpm prettier"
+        ]
     }
 }
 
