--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
     "extends": "@jiangweiye/tsconfig/tsconfig.node.json",
     "compilerOptions": {
-        "target": "esnext",
-        "lib": ["ESNext", "DOM"],
+        "composite": false,
+        "target": "ES5",
+        "lib": ["ESNext", "DOM", "ES2015", "ES2020.String"],
         "useDefineForClassFields": true,
         "module": "esnext",
         "moduleResolution": "Node",
-        "strict": true
+        "strict": true,
+        "importHelpers": true
     },
     "include": ["src/**/*", "tsup.config.ts"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
-
